--- a/app/views/spa/index.html.erb
+++ b/app/views/spa/index.html.erb
@@ -1,14 +1,102 @@
 <section>
-	<div class="container">
-		<div id="index">index</div>
+	<div class="themes-background">
+		<nav class="themes">
+			<h2>Themes</h2>
+
+			<ul>
+				<li><a href=""><div id="project1">
+				</div>
+					<h5>ucc berkley</h5>
+					<em>here is what I know.</em>
+				</a></li>
+
+				<li><a href=""><div id="project1">
+				</div>
+					<h5>ucc berkley</h5>
+					<em>here is what I know.</em>
+				</a></li>
+
+				<li><a href=""><div id="project1">
+				</div>
+					<h5>ucc berkley</h5>
+					<em>here is what I know.</em>
+				</a></li>
+
+				<li><a href=""><div id="project1">
+				</div>
+					<h5>ucc berkley</h5>
+					<em>here is what I know.</em>
+				</a></li>
+
+				<li><a href=""><div id="project1">
+				</div>
+					<h5>ucc berkley</h5>
+					<em>here is what I know.</em>
+				</a></li>
+
+				<li><a href=""><div id="project1">
+				</div>
+					<h5>ucc berkley</h5>
+					<em>here is what I know.</em>
+				</a></li>
+
+				<li><a href=""><div id="project1">
+				</div>
+					<h5>ucc berkley</h5>
+					<em>here is what I know.</em>
+				</a></li>
+
+				<li><a href=""><div id="project1">
+				</div>
+					<h5>ucc berkley</h5>
+					<em>here is what I know.</em>
+				</a></li>
+
+				<li><a href=""><div id="project1">
+				</div>
+					<h5>ucc berkley</h5>
+					<em>here is what I know.</em>
+				</a></li>
+
+				<li><a href=""><div id="project1">
+				</div>
+					<h5>ucc berkley</h5>
+					<em>here is what I know.</em>
+				</a></li>
+
+			</ul>
+		</nav>
 	</div>
 </section>
 
 <style type="text/css">
 	
-	#index {
-		padding: 100px;
-		color: white;
-		background-color: black;
-	}
+.themes-background {
+	width: 100%;
+	background: #1A1A1A;
+	overflow: hidden;
+}
+
+.themes {
+	font-weight: 500;
+	padding-top: 0.5em;
+	padding-bottom: 1.5em;
+	overflow: hidden;
+	width: 80%;
+	margin: 0 auto;
+}
+
+.themes ul {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+
+}
+
+.themes ul li {
+	width: 19%;
+	display: inline-block;
+	margin: 3px;
+}
+
 </style>
