--- a/app/assets/stylesheets/spa.scss
+++ b/app/assets/stylesheets/spa.scss
@@ -15,3 +15,11 @@
 	width: 100%;
 	height: 500px;
 }
+
+#project1 {
+	background: url(abstract1.png);
+	background-size: cover;
+	background-position: center;
+	width: 100%;
+	padding-bottom: 150%;
+}
