--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<section>
+<section id="border">
 	<div id="header">
 <!-- 	<div id="menu-stub"></div> -->
 	<div id="menu">
@@ -41,6 +41,11 @@
 		top: 0;
 		right: 0;
 }*/
+	#border {
+		border-style: solid;
+		border-size: 20px;
+		border-color: black;
+	}
 
 	#menu {
 		position: absolute;
