--- a/app/assets/stylesheets/spa.scss
+++ b/app/assets/stylesheets/spa.scss
@@ -23,3 +23,40 @@
 	width: 100%;
 	padding-bottom: 150%;
 }
+
+#disney {
+	background: url(disney.png);
+	background-size: cover;
+	width: 100%;
+	padding: 30px;
+}
+#evernote {
+	background: url(evernote.png);
+	background-position: center;
+	width: 100%;
+}
+#google {
+	background: url(google.png);
+	background-position: center;
+	width: 100%;
+}
+#ie {
+	background: url(ie.png);
+	background-position: center;
+	width: 100%;
+}
+#microsoft {
+	background: url(microsoft.png);
+	background-position: center;
+	width: 100%;
+}
+#msr {
+	background: url(msr.png);
+	background-position: center;
+	width: 100%;
+}
+#pulse {
+	background: url(pulse.png);
+	background-position: center;
+	width: 100%;
+}
