--- a/app/views/spa/index.html.erb
+++ b/app/views/spa/index.html.erb
@@ -69,6 +69,25 @@
 	</div>
 </section>
 
+<section>
+	<div id="sponsor">
+		<div class="container">
+			<div class="listing-sponsors">
+				<ul>
+					<li><a href="" id="disney"></a></li>
+					<li><a href="" id="evernote"></a></li>
+					<li><a href="" id="google"></a></li>
+					<li><a href="" id="ie"></a></li>
+					<li><a href="" id="microsoft"></a></li>
+					<li><a href="" id="msr"></a></li>
+					<li><a href="" id="pulse"></a></li>
+
+				</ul>
+			</div>
+		</div>
+	</div>
+</section>
+
 <style type="text/css">
 	
 .themes-background {
@@ -99,4 +118,18 @@
 	margin: 3px;
 }
 
+#sponsor {
+	width: 100%;
+	background-color: #5E5E5E;
+	display: inline-block;
+	padding: 100px;
+	list-style: none;
+}
+
+.listing-sponsors ul li {
+	width: 20%;
+	display: inline-block;
+	text-decoration: none;
+	list-style: none;
+}
 </style>
